[package]
name = "ccs"
version = "0.9.1"
edition = "2021"
license = "0BSD"
repository = "https://github.com/museun/ccs"

[dependencies]
anstream = "0.2.6"
anyhow = "1.0.91"
clap = { version = "4.5.20", features = [ "wrap_help" ] }
directories = "5.0.1"
indoc = "2.0.5"
owo-colors = { version = "3.5.0", features = [ "supports-colors" ] }
serde = { version = "1.0.213", features = [ "derive" ] }
serde_json = "1.0.132"
str_indices = "0.4.4"
toml = "0.7.8"
