[package]
name = "ccs"
version = "0.9.2"
edition = "2021"
license = "0BSD"
repository = "https://github.com/museun/ccs"

[dependencies]
anstream = "0.2.6"
anyhow = "1.0.95"
clap = { version = "4.5.23", features = [ "wrap_help" ] }
directories = "5.0.1"
indoc = "2.0.5"
owo-colors = { version = "3.5.0", features = [ "supports-colors" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.134"
str_indices = "0.4.4"
toml = "0.7.8"
