[package]
name = "ccs"
version = "0.9.2"
edition = "2021"
license = "0BSD"
repository = "https://github.com/museun/ccs"

[dependencies]
anstream = "0.6.18"
anyhow = "1.0.95"
arboard = "3.4.1"
clap = { version = "4.5.23", features = [ "wrap_help" ] }
crossterm = { version = "0.28.1", default-features = false, features = [ "events", "windows" ] }
directories = "5.0.1"
flume = { version = "0.11.1", default-features = false }
ignore = "0.4.23"
notify = "7.0.0"
owo-colors = { version = "3.5.0", features = [ "supports-colors" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.134"
str_indices = "0.4.4"
toml = "0.7.8"
